# graphics

./: .bazelrc  .gitignore  .gitmodules  CLAUDE.md  GUIDELINES.md  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-graphics  bazel-out  bazel-testlogs  imgui.ini
algs/: BUILD.bazel  README.md  a_star.hh  a_star.inl
components/: BUILD.bazel  README.md  animation.cc  animation.hh  center.cc  center.hh  collider.cc  collider.hh  component.hh  draw_grid_cell.cc  draw_grid_cell.hh  draw_rectangle.cc  draw_rectangle.hh  draw_text.cc  draw_text.hh  fps_counter.cc  fps_counter.hh  gravity.cc  gravity.hh  grid_collider.cc  grid_collider.hh  hit_box.cc  hit_box.hh  hurt_box.cc  hurt_box.hh  jump_reset.cc  jump_reset.hh  jumper.cc  jumper.hh  label.cc  label.hh  light_emitter.cc  light_emitter.hh  shader_renderer.cc  shader_renderer.hh  sprite.cc  sprite.hh  zoom.cc  zoom.hh
controller/: BUILD.bazel  README.md  controller.cc  controller.hh
fonts/: BUILD.bazel
geometry/: BUILD.bazel  rectangle_utils.cc  rectangle_utils.hh  transform_utils.cc  transform_utils.hh
lightmaze/: BUILD.bazel  README.md  lightmaze.cc  lightmaze.hh  lightmaze_main.cc  mode_manager.cc  mode_manager.hh  platform.cc  platform.hh  player.cc  player.hh
lightmaze/components/: BUILD.bazel  lightmaze_collider.cc  lightmaze_collider.hh  lightmaze_light_volume.cc  lightmaze_light_volume.hh
lightmaze/map/: BUILD.bazel  map.cc  map.hh  map_entity.cc  map_entity.hh  map_mode_manager.cc  map_mode_manager.hh
lightmaze/saves/: current_level.yaml
lightmaze/tests/: BUILD.bazel  map_entity_test.cc
model/: BUILD.bazel  README.md  entity_id.hh  game_state.cc  game_state.hh  game_state.inl  rectangle.cc  rectangle.hh
scripts/: evaluate_texture_set_files.py
shader_demo/: BUILD.bazel  shader_demo.cc  shader_demo.hh  shader_demo_main.cc  test_entity.cc  test_entity.hh
shader_demo/assets/shaders/: BUILD.bazel  basic.frag  basic.vert
sim/: BUILD
snake/: BUILD.bazel  snake.cc  snake.hh  snake_main.cc
sprites/snake/: BUILD.bazel
sprites/wiz/map_textures/: BUILD.bazel  texture_set.yaml
sprites/wiz/player/: BUILD.bazel  player_sprites.yaml
sprites/wiz/skeleton/: BUILD.bazel  sprites.yaml
sprites/wiz/workers/: BUILD.bazel  sprites.yaml
systems/: BUILD.bazel  README.md  collisions.cc  collisions.hh  grid_collisions.hh  grid_collisions.inl  lighting_system.cc  lighting_system.hh  system.hh
systems/assets/shaders/: BUILD.bazel  lighting.frag  lighting.vert
test_utils/: BUILD.bazel  test_main.cc
tic/: BUILD.bazel  tic.cc  tic.hh  tic_main.cc
utility/: BUILD.bazel  LICENSE  overload.hh  try.hh
view/: BUILD.bazel  README.md  main.cc  screen.cc  screen.hh  shader.cc  shader.hh  texture.cc  texture.hh
view/tileset/: BUILD.bazel  texture_sequence.hh  texture_set.cc  texture_set.hh
wiz/: BUILD.bazel  character_mode.hh  end_screen.cc  end_screen.hh  mode_manager.cc  mode_manager.hh  movable_stone.cc  movable_stone.hh  player.cc  player.hh  spawner.hh  spawner.inl  wiz.cc  wiz.hh  wiz_main.cc
wiz/components/: BUILD.bazel  character_animation_set.cc  character_animation_set.hh  health_bar.cc  health_bar.hh  hit_hurt_boxes.hh  hit_hurt_boxes.inl
wiz/enemies/: BUILD.bazel  skeleton.cc  skeleton.hh  skeleton_spawner.cc  skeleton_spawner.hh
wiz/good_npcs/: BUILD.bazel  worker.cc  worker.hh
wiz/map/: BUILD.bazel  cellular_automata_generator.hh  cellular_automata_generator.inl  grass_tile.cc  grass_tile.hh  map.cc  map.hh  room_corridor_generator.hh  room_corridor_generator.inl  tree_tile.cc  tree_tile.hh  wall_tile.cc  wall_tile.hh
wiz/pathfinding/: BUILD.bazel  pathfinder.cc  pathfinder.hh
wiz/ui/: BUILD.bazel  fps_counter.cc  fps_counter.hh
