load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
  name = "animation",
  srcs = ["animation.cc"],
  hdrs = ["animation.hh"],
  deps = [
    ":sprite",
    "//geometry:rectangle_utils",
    "//utility:try",
    "//view:screen",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "center",
  srcs = ["center.cc"],
  hdrs = ["center.hh"],
  deps = [
    ":component",
    "//utility:try",
    "//view:screen",
    "@eigen",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "component",
  hdrs = ["component.hh"],
  deps = [
    "//utility:try",
    "//view:screen",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "collider",
  srcs = ["collider.cc"],
  hdrs = ["collider.hh"],
  deps = [
    ":component",
    "//model:entity_id",
    "//utility:try",
    "@eigen",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "grid_collider",
  srcs = ["grid_collider.cc"],
  hdrs = ["grid_collider.hh"],
  deps = [
    ":component",
    "//model:entity_id",
    "//utility:try",
    "@eigen",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "draw_grid_cell",
  srcs = ["draw_grid_cell.cc"],
  hdrs = ["draw_grid_cell.hh"],
  deps = [
    ":draw_rectangle",
    "//geometry:transform_utils",
    "//utility:try",
    "@eigen",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "draw_rectangle",
  srcs = ["draw_rectangle.cc"],
  hdrs = ["draw_rectangle.hh"],
  deps = [
    ":component",
    "//geometry:rectangle_utils",
    "//utility:try",
    "//view:screen",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "sprite",
  srcs = ["sprite.cc"],
  hdrs = ["sprite.hh"],
  deps = [
    ":component",
    "//geometry:rectangle_utils",
    "//utility:try",
    "//view:screen",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "label",
  srcs = ["label.cc"],
  hdrs = ["label.hh"],
  deps = [
    ":component",
    "//model:entity_id",
    "//model:game_state",
    "//utility:try",
    "//view:screen",
  ],
  visibility = ["//visibility:public"],
)
