load("@rules_cc//cc:defs.bzl", "cc_library")

cc_binary(
  name = "snake_main",
  srcs = ["snake_main.cc"],
  deps = [
    ":snake",
    "//controller:controller"
  ],
)

cc_library(
  name = "snake",
  srcs = ["snake.cc"],
  hdrs = ["snake.hh"],
  data = ["//sprites/snake:apple"],
  deps = [
    "//view:texture",
    "//geometry:transform_utils",
    "//systems:grid_collisions",
    "//model:game_state",
    "//model:rectangle",
    "//view:screen",
    "//utility:overload",
    "//components:draw_grid_cell",
    "//components:label",
    "//components:sprite",
    "@eigen",
  ]
)
