load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "screen",
    srcs = ["screen.cc"],
    hdrs = ["screen.hh"],
    visibility = ["//visibility:public"],
    deps = [
      "//view:texture",
      "//view:shader",
      "//utility:try",
      "@imguilib//:imgui",
      "@eigen"
    ],
    data = ["//fonts:fonts"]
)

cc_library(
    name = "texture",
    srcs = ["texture.cc"],
    hdrs = ["texture.hh"],
    visibility = ["//visibility:public"],
    deps = [
      "@imguilib//:imgui",
      "@eigen"
    ],
    data = ["//fonts:fonts"]
)

cc_library(
    name = "shader",
    srcs = ["shader.cc"],
    hdrs = ["shader.hh"],
    visibility = ["//visibility:public"],
    deps = [
      "//utility:try",
      "@eigen",
      "@imguilib//:imgui"
    ],
    linkopts = [
      "-lGL",
      "-lGLEW"
    ],
)
