load("@rules_cc//cc:defs.bzl", "cc_library")

cc_binary(
  name = "wiz_main",
  srcs = ["wiz_main.cc"],
  deps = [
    ":wiz",
    "//controller:controller"
  ],
)

cc_library(
  name = "movable_stone",
  srcs = ["movable_stone.cc"],
  hdrs = ["movable_stone.hh"],
  data = ["//sprites/wiz/player:player"],
  deps = [
    "//view:texture",
    "//model:game_state",
    "//view:screen",
    "//components:center",
    "//components:sprite",
    "//components:collider",
    "//components:animation",
    "//wiz/map:grass_tile",
    "@eigen",
  ],
  visibility = [":__subpackages__"],
)

cc_library(
  name = "player",
  srcs = ["player.cc"],
  hdrs = ["player.hh"],
  data = ["//sprites/wiz/player:player"],
  deps = [
    "//view:texture",
    "//view:screen",
    "//components:center",
    "//components:sprite",
    "//components:collider",
    "//components:animation",
    "//wiz/map:grass_tile",
    "@eigen",
  ],
  visibility = [":__subpackages__"],
)

cc_library(
  name = "mode_manager",
  srcs = ["mode_manager.cc"],
  hdrs = ["mode_manager.hh"],
  data = [],
  deps = [
    ":player",
    ":movable_stone",
    "//wiz/enemies:skeleton",
    "//wiz/map:map",
    "//model:game_state",
    "//view:screen",
    "@eigen",
  ],
  visibility = [":__subpackages__"],
)

cc_library(
  name = "wiz",
  srcs = ["wiz.cc"],
  hdrs = ["wiz.hh"],
  data = [],
  deps = [
    ":mode_manager",
    "//systems:collisions",
    "//model:game_state",
    "//view:screen",
  ],
  visibility = [":__subpackages__"],
)
