load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
  name = "character_mode",
  hdrs = ["character_mode.hh"],
  visibility = [":__subpackages__"],
)

cc_binary(
  name = "wiz_main",
  srcs = ["wiz_main.cc"],
  deps = [
    ":wiz",
    "//controller:controller"
  ],
)

cc_library(
  name = "movable_stone",
  srcs = ["movable_stone.cc"],
  hdrs = ["movable_stone.hh"],
  data = [
    "//sprites/wiz/map_textures:texture_set",
  ],
  deps = [
    "//view:texture",
    "//model:game_state",
    "//view:screen",
    "//components:center",
    "//components:sprite",
    "//components:collider",
    "//components:animation",
    "//wiz/map:grass_tile",
    "@eigen",
  ],
  visibility = [":__subpackages__"],
)

cc_library(
  name = "player",
  srcs = ["player.cc"],
  hdrs = ["player.hh"],
  data = ["//sprites/wiz/player:player"],
  deps = [
    ":character_mode",
    "//view:texture",
    "//view:screen",
    "//components:hit_box",
    "//components:hurt_box",
    "//components:center",
    "//components:sprite",
    "//components:collider",
    "//components:animation",
    "//wiz/map:grass_tile",
    "//wiz/components:character_animation_set",
    "//wiz/components:health_bar",
    "//wiz/components:hit_hurt_boxes",
    "@eigen",
  ],
  visibility = [":__subpackages__"],
)

cc_library(
  name = "mode_manager",
  srcs = ["mode_manager.cc"],
  hdrs = ["mode_manager.hh"],
  data = [],
  deps = [
    ":character_mode",
    ":player",
    ":movable_stone",
    ":end_screen",
    "//wiz/enemies:skeleton_spawner",
    "//wiz/good_npcs:worker",
    "//wiz/map:map",
    "//model:game_state",
    "//view:screen",
    "@eigen",
  ],
  visibility = [":__subpackages__"],
)

cc_library(
  name = "wiz",
  srcs = ["wiz.cc"],
  hdrs = ["wiz.hh"],
  data = [],
  deps = [
    ":mode_manager",
    "//systems:collisions",
    "//model:game_state",
    "//view:screen",
  ],
  visibility = [":__subpackages__"],
)

cc_library(
  name = "end_screen",
  srcs = ["end_screen.cc"],
  hdrs = ["end_screen.hh"],
  data = [],
  deps = [
    "//components:center",
    "//components:draw_rectangle",
    "//components:label",
    "//model:game_state",
    "//view:texture",
  ],
  visibility = [":__subpackages__"],
)
