load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
  name = "map_entity",
  srcs = ["map_entity.cc"],
  hdrs = ["map_entity.hh"],
  data = [],
  deps = [
    ":map_mode_manager",
    "//model:game_state",
    "//view:screen",
    "//components:center",
    "//components:draw_rectangle",
    "//components:collider",
    "//lightmaze/components:lightmaze_light_volume",
    "//components:jump_reset",
    "//geometry:rectangle_utils",
    "//lightmaze/components:lightmaze_collider",
    "@eigen",
    "@yaml-cpp",
  ],
  visibility = ["//lightmaze:__subpackages__"],
)

cc_library(
  name = "map",
  srcs = ["map.cc"],
  hdrs = ["map.hh"],
  data = [],
  deps = [
    ":map_entity",
    ":map_mode_manager",
    "//lightmaze:player",
    "//model:game_state",
    "//view:screen",
    "//components:light_emitter",
    "//components:zoom",
    "@eigen",
    "@yaml-cpp",
  ],
  visibility = ["//lightmaze:__subpackages__"],
)

cc_library(
  name = "map_mode_manager",
  srcs = ["map_mode_manager.cc"],
  hdrs = ["map_mode_manager.hh"],
  data = [],
  deps = [
    "//model:game_state",
    "//view:screen",
  ],
  visibility = ["//lightmaze:__subpackages__"],
)
