cc_library(
  name = "character_animation_set",
  srcs = ["character_animation_set.cc"],
  hdrs = ["character_animation_set.hh"],
  deps = [
    "//wiz:character_mode",
    "//components:animation",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "health_bar",
  srcs = ["health_bar.cc"],
  hdrs = ["health_bar.hh"],
  deps = [
    "//components:draw_rectangle",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "hit_hurt_boxes",
  srcs = ["hit_hurt_boxes.inl"],
  hdrs = ["hit_hurt_boxes.hh"],
  deps = [
    "//components:hit_box",
    "//components:hurt_box",
  ],
  visibility = ["//visibility:public"],
)
