cc_library(
  name = "skeleton",
  srcs = ["skeleton.cc"],
  hdrs = ["skeleton.hh"],
  data = ["//sprites/wiz/skeleton:skeleton"],
  deps = [
    "//wiz:player",
    "//wiz/pathfinding:pathfinder",
    "//view/tileset:texture_set",
    "//model:game_state",
    "//view:screen",
    "//components:sprite",
    "//components:collider",
    "//components:animation",
    "//components:hit_box",
    "@eigen",
  ],
  visibility = ["//wiz:__subpackages__"],
)
