cc_library(
  name = "worker",
  srcs = ["worker.cc"],
  hdrs = ["worker.hh"],
  data = ["//sprites/wiz/workers:workers"],
  deps = [
    "//algs:a_star",
    "//model:game_state",
    "//wiz:character_mode",
    "//wiz/map:map",
    "//wiz/map:grass_tile",
    "//view/tileset:texture_set",
    "//view:screen",
    "//wiz/components:character_animation_set",
    "@eigen",
  ],
  visibility = ["//wiz:__subpackages__"],
)
