load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
  name = "map",
  srcs = ["map.cc"],
  hdrs = ["map.hh"],
  deps = [
    ":grass_tile",
    "//model:game_state",
    "@eigen",
  ],
  visibility = ["//wiz:__subpackages__"],
)

cc_library(
  name = "grass_tile",
  srcs = ["grass_tile.cc"],
  hdrs = ["grass_tile.hh"],
  data = [
    "//sprites/wiz/map_textures:texture_set",
  ],
  deps = [
    "//components:collider",
    "//components:sprite",
    "//model:game_state",
    "//view/tileset:texture_set",
    "//view:texture",
    "//view:screen",
    "//wiz:player",
    "//wiz/components:hit_hurt_boxes",
    "@eigen",
  ],
  visibility = ["//wiz:__subpackages__"],
)
