load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
  name = "map",
  srcs = ["map.cc"],
  hdrs = ["map.hh"],
  deps = [
    ":cellular_automata_generator",
    ":room_corridor_generator",
    ":grass_tile",
    ":wall_tile",
    "//model:game_state",
    "@eigen",
  ],
  visibility = ["//wiz:__subpackages__"],
)

cc_library(
  name = "cellular_automata_generator",
  hdrs = [
    "cellular_automata_generator.hh",
    "cellular_automata_generator.inl",
  ],
  visibility = ["//wiz:__subpackages__"],
)

cc_library(
  name = "room_corridor_generator",
  hdrs = [
    "room_corridor_generator.hh",
    "room_corridor_generator.inl",
  ],
  visibility = ["//wiz:__subpackages__"],
)

cc_library(
  name = "grass_tile",
  srcs = ["grass_tile.cc"],
  hdrs = ["grass_tile.hh"],
  data = [
    "//sprites/wiz/map_textures:texture_set",
  ],
  deps = [
    "//components:collider",
    "//components:sprite",
    "//model:game_state",
    "//view/tileset:texture_set",
    "//view:texture",
    "//view:screen",
    "//wiz:player",
    "//wiz/components:hit_hurt_boxes",
    "@eigen",
  ],
  visibility = ["//wiz:__subpackages__"],
)

cc_library(
  name = "wall_tile",
  srcs = ["wall_tile.cc"],
  hdrs = ["wall_tile.hh"],
  data = [
    "//sprites/wiz/map_textures:texture_set",
  ],
  deps = [
    "//components:collider",
    "//components:sprite",
    "//model:game_state",
    "//view/tileset:texture_set",
    "//view:texture",
    "@eigen",
  ],
  visibility = ["//wiz:__subpackages__"],
)
